--- a/src/components/EditingPanel/EditingPanel.module.scss
+++ b/src/components/EditingPanel/EditingPanel.module.scss
@@ -21,6 +21,14 @@
         max-width: 300px;
     }
 
+    @media screen and (max-width: 375px) {
+        top: 20%;
+    }
+
+    @media screen and (max-width: 320px) {
+        top: 10%;
+    }
+
     &>h2 {
         color: #fff;
         margin-bottom: 20px;
