--- a/src/components/ConfirmWindow/ConfirmWindow.module.scss
+++ b/src/components/ConfirmWindow/ConfirmWindow.module.scss
@@ -1,12 +1,14 @@
 .confirm-window {
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: #333;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(2, 0, 36, 1)100%);
+    border: inset 5px rgba(27, 27, 118, 0.5);
     border-radius: 10px;
+    margin: 0 auto;
     padding: 40px 20px;
     color: #fff;
     text-align: center;
+    width: 100%;
+    max-width: 400px;
     position: fixed;
     top: 40%;
     right: 0;
