--- a/src/components/EditingPanel/EditingPanel.module.scss
+++ b/src/components/EditingPanel/EditingPanel.module.scss
@@ -1,11 +1,13 @@
 .editing-panel {
-    background-color: #333;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(2, 0, 36, 1)100%);
+    border: inset 5px rgba(27, 27, 118, 0.5);
     border-radius: 10px;
-    width: 100%;
-    max-width: 600px;
     margin: 0 auto;
     padding: 30px;
     text-align: center;
+    width: 100%;
+    max-width: 600px;
     position: fixed;
     top: 30%;
     right: 0;
@@ -17,7 +19,7 @@
     }
 
     @media screen and (max-width: 500px) {
-        padding: 20px;
+        padding: 15px;
         max-width: 300px;
     }
 
@@ -35,13 +37,25 @@
     }
 
     &>form {
-        input {
-            display: block;
+        input, textarea {
+            border-radius: 5px;
             width: 100%;
             padding: 10px;
             color: #000;
             background-color: #fff;
             margin-bottom: 20px;
+        }
+
+        textarea {
+            resize: none;
+            
+            &::placeholder {
+                font-size: 14px;
+            }
+
+            &[name="photo"] {
+                font-size: 10px;
+            }
         }
     }
 
