--- a/src/components/ConfirmWindow/ConfirmWindow.module.scss
+++ b/src/components/ConfirmWindow/ConfirmWindow.module.scss
@@ -17,7 +17,7 @@
 
     @media screen and (max-width: 500px) {
         padding: 20px 10px;
-        max-width: 300px;
+        max-width: calc(100% - 30px);
     }
 
     &>p {
