--- a/src/components/EditingPanel/EditingPanel.module.scss
+++ b/src/components/EditingPanel/EditingPanel.module.scss
@@ -15,12 +15,11 @@
     z-index: 10000;
 
     @media screen and (max-width: 700px) {
-        max-width: 450px;
+        max-width: calc(100% - 30px);
     }
 
     @media screen and (max-width: 500px) {
         padding: 15px;
-        max-width: 300px;
     }
 
     @media screen and (max-width: 375px) {
